// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer movie details should update store on GET_MOVIE_DETAILS_FAILURE 1`] = `
Object {
  "details": Object {
    "movieName": "test",
  },
}
`;

exports[`Reducer movie details should update store on GET_MOVIE_DETAILS_SUCCESS 1`] = `
Object {
  "details": Object {
    "movieName": "matrix",
  },
}
`;
